--- a/scss/modules/_banner.scss
+++ b/scss/modules/_banner.scss
@@ -30,7 +30,6 @@ section .banner-carousel {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;
         }
 
         &::before {
@@ -50,7 +49,6 @@ section .banner-carousel {
 }
 
 .banner-text-wrapper {
-    z-index: 4;
     color: #fff;
     position: relative;
     padding-top: 3.75rem;
