--- a/scss/modules/_news.scss
+++ b/scss/modules/_news.scss
@@ -109,7 +109,6 @@
             position: absolute;
             right: 0px;
             padding: 0 10px;
-            z-index: 1;
             top: 10px;
 
             font-size: .75rem;
