--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 1;
+    z-index: $z-sidebar;
     float: right;
     width: 275px;
     height: 100vh;
