--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -95,3 +95,11 @@ $break--s: 460px;
 $break--m: 768px;
 $break--l: 992px;
 $break--xl: 1260px;
+
+
+//  Z-indexes
+$z-sidebar:1;
+$z-header:2;
+$z-submenus:3;
+$z-pagewrapper-dim:4;
+$z-pagewrapper:5;
